Added register login

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,6 +20,10 @@ security:
       form_login:
         login_path: login
         check_path: login
+
+      logout:
+        path: logout
+        target: app
       # activate different ways to authenticate
       # https://symfony.com/doc/current/security.html#firewalls-authentication
 
