--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,10 +5,13 @@ security:
   # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
   providers:
     users_in_memory: { memory: null }
+    chain_provider:
+      chain:
+        providers: [in_database, admin_database]
     in_database:
-      entity:
-        class: App\Entity\User
-        property: email
+      entity: { class: App\Entity\User, property: email }
+    admin_database:
+      entity: { class: App\Entity\Admin, property: email }
   firewalls:
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -24,11 +27,23 @@ security:
       logout:
         path: logout
         target: app
-      # activate different ways to authenticate
-      # https://symfony.com/doc/current/security.html#firewalls-authentication
+    admin:
+      pattern: ^/secretAdminLogin
+      provider: admin_database
+      anonymous: lazy
 
-      # https://symfony.com/doc/current/security/impersonating_user.html
-      # switch_user: true
+      form_login:
+        login_path: secretAdminLogin
+        check_path: secretAdminLogin
+
+      logout:
+        path: logout
+        target: app
+    # activate different ways to authenticate
+    # https://symfony.com/doc/current/security.html#firewalls-authentication
+
+    # https://symfony.com/doc/current/security/impersonating_user.html
+    # switch_user: true
 
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
